Fix mobile image alignment

--- a/_includes/home-critical.scss
+++ b/_includes/home-critical.scss
@@ -11,7 +11,9 @@
   }
 
   img {
-    margin-right: 2rem;
+    @media screen and (min-width: 800px) {
+      margin-right: 2rem;
+    }
     border: 1px solid var(--border-color);
     border-radius: 50%;
     flex-shrink: 0;
